# QViT-Exo

./: .gitignore  .mailmap  README.md  pyproject.toml  requirements.txt
configs/: data_config.yaml  quantum_vit_config.yaml  sanity_config.yaml  train_config.yaml  uq_config.yaml  vit_config.yaml
data/splits/: koi_catalog_raw.csv  test.csv  train.csv  val.csv
paper/: main.tex  references.bib
results/: threshold_results.csv
results/comparison/: metrics_comparison.csv
results/interpretability/: classical_profiles.npy  labels.npy  quantum_profiles.npy  stats_report.txt
results/uq/: abstention_sweep.json  coverage_sweep.json  uq_report.txt
scripts/: analyze_thresholds.py  build_dataset.py  comparative_analysis.py  comprehensive_baseline_analysis.py  run_interpretability.py  run_tess_search.py  run_uq.py  train_quantum_vit.py  train_vit.py  visualize_attention.py
src/data/: auxiliary.py  catalog.py  dataset.py  download.py  imaging.py  preprocess.py  tess_catalog.py  tess_download.py
src/interpretability/: attention_analysis.py
src/models/: baseline_cnn.py  quantum_vit.py  vit_model.py
src/training/: metrics.py  trainer.py  vit_trainer.py
src/uq/: calibration.py  conformal.py
src/utils/: __init__.py  (+3 more)
tests/: conftest.py  test_attention_analysis.py  test_auxiliary.py  test_baseline_cnn.py  test_catalog.py  test_config.py  test_conformal.py  test_dataset.py  test_download.py  test_imaging.py  test_metrics.py  test_preprocess.py  test_quantum_vit.py  test_reproducibility.py  test_tess_pipeline.py  test_trainer.py  test_vit_model.py  test_vit_trainer.py
